

public class BaseState 
{
    public virtual void Enter() {}
    public virtual void Execute() {}
    public virtual void Exit() {}
}
