

public interface ICombatEntity
{
    public void TakeDamage(int damage);
    
    /// summary:
    ///     Default method
    public void Effect(int directrion) {}
}
